main background carousell bugging on iOS

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     text-decoration: none;
     color: var(--text-color);
-    
     box-sizing: border-box;
 }
 
@@ -179,7 +178,7 @@ header{
 }
 
 .navbar li:hover::after {
-width: 100%;
+    width: 100%;
 }
 
 .navbar a{
@@ -205,7 +204,7 @@ width: 100%;
 .burger div{
     width: 30px;
     height: 3px;
-    background-color: rgb(255, 255, 255); /* COLORS */
+    background-color: rgb(255, 255, 255);
     transition: all 0.3s ease;
     border-radius: 3px;
 }
@@ -287,7 +286,6 @@ width: 100%;
     font-size: 1.7rem;
     font-weight: 300;
     transition: all 1s ease;
-    /* background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.3)); */
     height: 10vh;
     text-align: center;
     color: white;
@@ -307,9 +305,8 @@ width: 100%;
     transition: all 2s ease;
     color: white;
 }
-    /* slogan */
 
-/* MAIN PART */
+
 /* SECTION TWO about and contact form */
 .about{
     display: flex;
@@ -335,7 +332,6 @@ width: 100%;
     margin: 0 1rem;
 }
 
-/* SECTION TWO about and contact form */
 /* SECTION THREE types of photos */
 .three{
     display: flex;
@@ -371,6 +367,7 @@ width: 100%;
     box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
     filter: var(--dim-picture);
 }
+
 .photo-luxury{
     height: 15rem;
     border-radius: 0.3rem;
@@ -378,7 +375,7 @@ width: 100%;
     box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
     filter: var(--dim-picture);
 }
-/* SECTION THREE types of photos */
+
 /* SECTION FOUR help you */
 .four {
     display: flex;
@@ -404,7 +401,7 @@ width: 100%;
     border-radius: 0.3rem;
     box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
 }
-/* SECTION FOUR help you */
+
 /* SECTION FIVE references */
 .five.references{
     display: flex;
@@ -430,21 +427,21 @@ width: 100%;
     justify-content: space-evenly;
     scroll-snap-align: center;
 }
+
 .reference-text{
     margin: 2rem 0;
     font-size: 2rem;
     font-weight: 100;
 }
+
 .reference img{
     width: 5rem;
     border-radius: 5rem;
     margin: 1rem;
 }
-/* SECTION FIVE references */
+
 /* SECTION CONTACT */
 .contact{
-    /* box-shadow: 0 0.2rem 2rem rgba(70, 70, 70, 0.3); */
-    /* box-shadow: 0 0.2rem 2rem rgba(0, 0, 0, 0.5); */
     box-shadow: var(--dark-shadow);
     border-radius: 0.3rem;
     padding: 2rem 4rem;
@@ -472,6 +469,7 @@ form{
     flex-direction: column;
     align-items: stretch;
 }
+
 input{
     height: 2rem;
     border: none;
@@ -500,6 +498,7 @@ input:hover,
 textarea:hover{
     background-color:  rgba(220,220,220);
 }
+
 .contact-form button{
     width: 10rem;
     height: 3rem;
@@ -512,6 +511,7 @@ textarea:hover{
     font-size: 1rem;
     margin-top: 1rem;
 }
+
 .contact-form button:hover{
     background-color:tomato;
     box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.4);
@@ -544,7 +544,6 @@ footer{
     align-items: center;
     border-top: 1px solid rgb(70,70,70);
     background: var(--bkg-color);
-    
 }
 
 .footer-outer{
@@ -579,7 +578,6 @@ footer p{
 /* BLOG */
 .intro{
     width: 100vw;
-    /* background: rgb(50,50,50); */
     background: linear-gradient(to bottom, rgba(0,0,0,0.3), var(--bkg-color)), url('../images/william-thomas-ny6tO4ItOEY-unsplash.jpeg') center/cover;
     display: flex;
     flex-direction: column;
@@ -619,7 +617,6 @@ footer p{
     overflow: scroll;
     display: flex;
     align-items: center;
-    /* box-shadow: -2rem 0.5rem 1rem rgba(0, 0, 0, 0.5), 0 0.5rem 1rem rgba(0, 0, 0, 0.5); */
     border-radius: 0.4rem;
     scroll-snap-type: x mandatory;
     scroll-padding: 1rem;
@@ -720,19 +717,6 @@ footer p{
     height: 100%;
 }
 
-.expand{
-    transform: scale(2)!important;
-    position: relative;
-}
-
-.overflow{
-    overflow: visible !important;
-}
-
-.position{
-    z-index: 2;
-}
-
 /* MODAL */
 .modal{
     display: flex;
@@ -761,6 +745,13 @@ footer p{
     opacity: 1;
 }
 
+.modal .previous{
+    transform: translateX(2rem);
+}
+.modal .next{
+    transform: translateX(-2rem);
+}
+
 .close-modal{
     position: absolute;
     z-index: 5;
@@ -774,6 +765,7 @@ footer p{
     opacity: 1;
 }
 
+/* MEDIA QUERIES */
 @media screen and (max-width:768px){
     header{
         background-color: rgba(70, 70, 70, 0);
@@ -929,8 +921,31 @@ footer p{
 @media screen and (max-width:500px){
         /* BLOG */
     .intro{
-        background: linear-gradient(to bottom, rgba(0,0,0,0.3), #151515), url('../images/background_blog_ios.jpg');
+        background: linear-gradient(to bottom, rgba(0,0,0,0.3), var(--bkg-color)), url('../images/background_blog_ios.jpg');
         background-repeat: no-repeat;
         background-size: cover;
+    }
+
+        /* GALLERY */
+    .gallery{
+        flex-direction: column;
+        overflow: scroll;
+        height: 35rem;
+        width: 100vw;
+        padding-left: 1rem;
+    }
+
+    .gallery .item{
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .gallery .item:hover{
+        filter: brightness(0.8);
+        transform: scale(1);
+    }
+
+    .modal img{
+        max-width: 100%;
     }
 }
